# stm32-usbd-examples

example-stm32f103c8/: Cargo.toml  README.md  openocd.cfg  openocd.gdb
example-stm32f103c8/examples/: midi.rs
example-stm32f103c8/src/: main.rs_no
