[package]
name = "example-stm32f103c8"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.4", features = ["rt"] }
#stm32f1xx-hal = { version = "0.3", features = ["rt"] }
panic-semihosting = "0.5"
usb-device = "0.2.3"
#usbd-serial = "0.1"
#stm32-usbd = { version = "0.4", features = ["stm32f103xx"] }
stm32-usbd = { version = "0.3", features = ["stm32f103xx"] }
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"

[dev-dependencies]
cortex-m-rtfm = "0.4.0"

[profile.release]
incremental = false # disable incremental build to allow lto on nightly
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
